Synching header and first translation block order with master.

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -34,7 +34,7 @@
 ##      Added key: 'button.quit'
 ##
 ##
-##  
+##
 ## 2.0.2
 ##     Added key: 'button.new'
 ##     Added key: 'label.group'
@@ -54,23 +54,23 @@
 ##     Added key: 'message.invalid.jid.error'
 ##     Added key: 'message.specify.group'
 ##     Added key: 'add'
-##  
-##  
+##
+##
 ##
 ## 2.0.5
 ##     Added key: 'Broadcast'
 ##     Added key: 'label.user.on.public.network'
 ##     Added key: 'label.network'
-## 
-## 
-## 2.0.6 
-##     Added key: 'button.add.user' 
-##     Added key: 'menuitem.sign.in' 
-##     Added key: 'menuitem.sign.out' 
-##     Added key: 'menuitem.sign.in.at.login' 
-##     Added key: 'menuitem.enter.login.information' 
-##     Added key: 'menuitem.delete.login.information' 
-##     Added key: 'button.save' 
+##
+##
+## 2.0.6
+##     Added key: 'button.add.user'
+##     Added key: 'menuitem.sign.in'
+##     Added key: 'menuitem.sign.out'
+##     Added key: 'menuitem.sign.in.at.login'
+##     Added key: 'menuitem.enter.login.information'
+##     Added key: 'menuitem.delete.login.information'
+##     Added key: 'button.save'
 ##
 ##
 ## 2.5
@@ -88,7 +88,6 @@
 ##     Added key: 'menuitem.show.offline.group'
 ##     Added key: 'menuitem.move.to'
 ##     Added key: 'menuitem.copy.to'
-
 ##     Added key: 'label.message.style'
 ##     Added key: 'label.emoticons'
 ##     Added key: 'checkbox.enable.emoticons'
@@ -98,23 +97,119 @@
 ## 2.5.2
 ##     Added key: 'tooltip.place.voice.call'
 ##     Added key: 'message.buzz.alert.notification'
-##     Added kye: 'message.buzz.sent'
+##     Added key: 'message.buzz.sent'
 ##
 ## 2.5.2
 ##     Added key: 'menuitem.user.guide'
-##	   Added key: 'apply'
-##	   Added key: 'checkbox.notify.user.comes.online'
+##
+##
+##
+## 2.5.7
+##     Added key: 'menuitem.languages'
+##     Added key: 'message.restart.required'
 ##     Added key: 'checkbox.notify.user.goes.offline'
-##	   Added key: 'label.contactlist.fontsize'
+##     Added key: 'checkbox.notify.user.comes.online'
+##     Added key: 'message.send.to.these.people'
+##     Added key: 'message'
+##     Added key: 'message.normal'
+##     Added key: 'message.alert.notify'
+##
+## 2.5.8
+##     Added key: 'message.enter.simple'
+##     Added key: 'message.enter.irc'
+##     Added key: 'message.enter.gadugadu'
+##     Added key: 'title.simple.registration'
+##     Added key: 'title.irc.registration'
+##     Added key: 'title.gadugadu.registration'
+##     Added key: 'message.username.error'
+##     Added key: 'message.password.error'
+##     Added key: 'message.nickname.error'
+##
+## 2.5.9
+##     Added key: 'message.gateway.username.error.
+##     Added key: 'message.gateway.password.error.
+##     Added key: 'message.gateway.nickname.error.
+##     Added key: 'answer'
+##     Added key: 'online'
+##     Added key: 'online'
+##     Added key: 'offline'
+##     Added key: 'participants'
+##     Added key: 'unfiled'
+##     Added key: 'while.offline'
+##     Added key: 'action.clear'
+##     Added key: 'action.copy '
+##     Added key: 'action.cut'
+##     Added key: 'action.paste'
+##     Added key: 'action.print'
+##     Added key: 'action.save'
+##     Added key: 'action.select.all'
+##     Added key: 'button.add2'
+##     Added key: 'button.copy.to.clipboard'
+##     Added key: 'button.reconnect2'
+##     Added key: 'button.tasks.active'
+##     Added key: 'button.tasks.all'
+##     Added key: 'button.view.notes'
+##     Added key: 'button.view.profile'
+##     Added key: 'button.view.tasklist'
+##     Added key: 'checkbox.notify.user.comes.online'
+##     Added key: 'checkbox.notify.user.goes.offline'
+##     Added key: 'checkbox.show.avatars.in.contaclist'
+##     Added key: 'checkbox.use.compression'
+##     Added key: 'group.empty'
+##     Added key: 'group.offline'
+##     Added key: 'label.add.task'
 ##     Added key: 'label.chatroom.fontsize'
-##     Added key: 'checkbox.show.avatars.in.contactlist'
+##     Added key: 'label.contactlist.fontsize'
+##     Added key: 'label.due'
+##     Added key: 'label.show'
+##     Added key: 'label.timeformat'
+##     Added key: 'menuitem.dial'
+##     Added key: 'menuitem.view.logs'
+##     Added key: 'message.disconnected.shutdown'
+##     Added key: 'message.invalid.username.password'
+##     Added key: 'message.no.updates'
+##     Added key: 'message.reconnect.attempting'
+##     Added key: 'message.reconnect.failed'
+##     Added key: 'message.reconnect.wait'
+##     Added key: 'message.send.picture'
+##     Added key: 'message.server.unavailable'
+##     Added key: 'message.unrecoverable.error'
+##     Added key: 'message.waiting.for.user.to.join'
+##     Added key: 'status.available'
+##     Added key: 'status.away'
+##     Added key: 'status.custom.messages'
+##     Added key: 'status.do.not.disturb'
+##     Added key: 'status.extended.away'
+##     Added key: 'status.free.to.chat'
+##     Added key: 'status.on.phone'
+##     Added key: 'status.online'
+##     Added key: 'status.pending'
+##     Added key: 'title.about'
+##     Added key: 'title.appearance'
+##     Added key: 'title.appearance.preferences'
+##     Added key: 'title.login.error'
+##     Added key: 'title.no.updates'
+##     Added key: 'title.notes'
+##     Added key: 'title.tasks'
+##     Added key: 'tooltip.appearance'
+##     Added key: 'tooltip.file.transfer'
+##     Added key: 'tooltip.send.email'
+##     Added key: 'tooltip.start.chat'
+##     Added key: 'delete.log.permanently'
+##     Added key: 'delete.permanently'
 ##     Added key: 'label.contactlist.avatarsize'
-##	   Added key: 'menuitem.add.groupchat.myname'
-##     Added key: 'menuitem.add.groupchat.mytext'
-##     Added key: 'menuitem.add.groupchat.popname'
-##	   Added key: 'title.group.chat.settings'
-##	   Added key: 'menuitem.view.logs'
-##	   Added key: 'title.appearance.preferences'
+##     Added key: 'title.qq.registration'
+##     Added key: 'message.enter.qq'
+##
+## 2.6.0
+##
+## 	   Added key: 'apply'
+## 	   Added key: 'title.subscription.request'
+## 	   Added key: 'label.add.to.roster'
+## 	   Added key: 'label.audio.device'
+## 	   Added key: 'label.video.device'
+## 	   Added key: 'button.re.detect'
+##
 ## 2.6.0 beta 1
 ##     Added key: 'menuitem.block.contact'
 ##     Added key: 'menuitem.unblock.contact'
@@ -123,43 +218,59 @@
 ##     Added key: 'button.login'
 ##     Added key: 'administrator'
 ##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
+## 	   Added key: 'checkbox.click.single.tray'
 ## 2.7.0 beta 1
+##	   Added key: 'message.search.period.month.one'
+##	   Added key: 'message.search.period.year.one'
+##	   Added key: 'message.search.period.none'
+## 	   Added key: 'message.search.page.timeperiod'
+## 	   Added key: 'message.search.page.counter'
+## 	   Added key: 'message.search.page.right'
+## 	   Added key: 'message.search.page.left'
+##    Added key: 'checkbox.sort.asc.history'
 ##	   Added key: 'message.file.transfer.dirnull'
 ##     Added key: 'message.file.transfer.nodir'
 ##     Added key: 'message.file.transfer.cantwritedir'
 ##     Added key: 'message.file.transfer.direrror.setdir'
 
-ok = Ok
-apply = Übernehmen
-administrator = Administrator
-cancel = Abbrechen
+accept = Akzeptieren
+active = Aktiv
 add = Hinzufügen
-use.default = Voreinstellungen laden
+administrator = Administrator
+answer = Antwort
+apply = Übernehmen
+available = Anwesend
+broadcast = Rundnachricht
+cancel = Abbrechen
 close = Schließen
 create = Erstellen
-invite = Einladen
 date = Datum
-from = Von
-room.name = Raumname
-join = Beitreten
 description = Beschreibung
-subject = Thema
+from = Von
+invite = Einladen
+join = Beitreten
+no = Nein
+not.registered = Nicht registriert
 occupants = Teilnehmer
-accept = Akzeptieren
-reject = Zurückweisen
+offline = Offline
+online = Online
+ok = Ok
 open = Öffnen
 open.folder = Verzeichnis öffnen
-retry = Wiederholen
-active = Aktiv
-not.registered = Nicht registriert
-save = Speichern
+participants = Teilnehmer
 refresh = Aktualisieren
-yes = Ja
-no = Nein
-broadcast = Rundnachricht
-available = Anwesend
+reject = Zurückweisen
+retry = Wiederholen
+room.name = Raumname
+save = Speichern
+subject = Thema
+unfiled = Unfiled
+use.default = Voreinstellungen laden
 user.has.signed.in = hat sich eingeloggt.
 user.has.signed.off = hat sich ausgeloggt.
+while.offline = While offline
+yes = Ja
+
 button.create.account = &Account Erstellen
 button.close = Schließen
 button.advanced = &Erweitert
@@ -815,12 +926,6 @@ tooltip.view.changelog = Änderungen anzeigen
 tooltip.view.readme = ReadMe anzeigen
 tooltip.notifications = Einstellungen der Benachrichtigungen für eingehende Chats.
 tooltip.place.voice.call = VOIP Anruf starten.
-answer = Antwort
-offline = Offline
-online = Online
-participants = Teilnehmer
-unfiled = Unfiled
-while.offline = While offline
 action.clear = Löschen
 action.copy = Kopieren
 action.cut = Ausschneiden
