Adding German translations of: unfiled while.offline

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -264,11 +264,11 @@ retry = Wiederholen
 room.name = Raumname
 save = Speichern
 subject = Thema
-unfiled = Unfiled
+unfiled = Nicht kategorisiert
 use.default = Voreinstellungen laden
 user.has.signed.in = hat sich eingeloggt.
 user.has.signed.off = hat sich ausgeloggt.
-while.offline = While offline
+while.offline = Während offline
 yes = Ja
 
 button.create.account = &Account Erstellen
