--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -277,9 +277,9 @@ action.cut = Ausschneiden
 action.paste = Einfügen
 action.print = Drucken
 action.save = Speichern
-action.select.all = Alles Auswählen
+action.select.all = Alles auswählen
 
-button.create.account = &Account Erstellen
+button.create.account = &Account erstellen
 button.close = Schließen
 button.advanced = &Erweitert
 button.browse = &Anzeigen...
@@ -372,7 +372,7 @@ label.room.topic = Raum &Thema
 label.password = &Passwort
 label.confirm.password = Neues Passwort &wiederholen
 label.server = &Server
-label.create.account = &Account Erstellen
+label.create.account = &Account erstellen
 label.close = &Schließen
 label.ok = OK
 label.cancel = Abbrechen
