Adding German translations of: button.update

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -325,7 +325,7 @@ button.start.chat = Chat
 button.tasks.active = Aktiv
 button.tasks.all = Alles
 button.unset.file.explorer = entferne gespeicherten File Browser
-button.update = &Update
+button.update = &Aktualisieren
 button.view.notes = Notizen anschauen
 button.view.profile = Gesamtes Profil anzeigen
 button.view.tasklist = Aufgabenliste anschauen
