Synching checkbox block with master.

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -330,49 +330,50 @@ button.view.notes = Notizen anschauen
 button.view.profile = Gesamtes Profil anzeigen
 button.view.tasklist = Aufgabenliste anschauen
 
-checkbox.save.password = Pass&wort speichern
-checkbox.auto.login = &Automatisches Login
-checkbox.use.proxy.server = &Proxy Server benutzen
+checkbox.allow.buzz = "&Buzzer" Funktion aktivieren.checkbox.save.password = Pass&wort speichern
 checkbox.auto.discover.port = &Host und Port automatisch bestimmen
-checkbox.permanent = Raum ist &permanent Online
-checkbox.private.room = Raum &ist Privat
-checkbox.show.time.in.chat.window = &Zeit im Chatfenster anzeigen
-checkbox.show.notifications.in.conference = &Anzeigen von Benachrichtigungen in Konferenzräumen
+checkbox.auto.login = &Automatisches Login
 checkbox.disable.chat.history = &Den Chatverlauf nicht speichern
 checkbox.disable.prev.chat.history = Die letzte &Unterhaltung nicht anzeigen
-checkbox.show.toaster = Informationen in einem &Popup anzeigen
-checkbox.window.to.front = &Fenster in den Vordergrund bringen
-checkbox.play.sound.on.new.message = Klang abspielen wenn eine neue &Nachricht eintrifft
-checkbox.play.sound.when.offline = Klang abspielen wenn ein &Teilnehmer &offline geht
-checkbox.play.sound.on.outgoing.message = &Klang abspielen wenn Nachricht ge&sendet wird
-checkbox.play.sound.on.invitation = Klang abspielen bei eintreffen einer &Konferenz &Einladung
+checkbox.enable.emoticons = &Emoticons aktivieren
+checkbox.graying.out = Nichtstuende Kontakte ausgrauen (benötigt Neustart von Spark)
 checkbox.idle.enabled = &Automatisches 'Away' bei Inaktivität aktivieren
 checkbox.launch.on.startup = &Spark bei Systemstart ausführen
 checkbox.reconnet.info = Art des Wiederverbindens:
 checkbox.reconnect.panel.big = Zeige ein Panel
 checkbox.reconnect.panel.small = Zeige eine Gruppe
 checkbox.reconnect.panel.icon = Zeige ein Icon
-checkbox.start.in.tray = Spark automatisch in der &Taskleiste starten
-checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
-checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
-checkbox.allow.buzz = "&Buzzer" Funktion aktivieren.
-checkbox.enable.emoticons = &Emoticons aktivieren 
-checkbox.graying.out = Nichtstuende Kontakte ausgrauen (benötigt Neustart von Spark)
-checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
 checkbox.notify.user.comes.online = &Benachrichtigen, wenn ein User Online kommt
 checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein &User Offline geht
-checkbox.notify.typing.systemtray = Zeige &Schreibhinweise im System Tray 
+checkbox.notify.typing.systemtray = Zeige &Schreibhinweise im System Tray
 checkbox.notify.systemtray = Zeige &neue Nachrichten im System Tray
+checkbox.permanent = Raum ist &permanent Online
+checkbox.play.sound.on.invitation = Klang abspielen bei eintreffen einer &Konferenz &Einladung
+checkbox.play.sound.on.new.message = Klang abspielen wenn eine neue &Nachricht eintrifft
+checkbox.play.sound.on.outgoing.message = &Klang abspielen wenn Nachricht ge&sendet wird
+checkbox.play.sound.when.offline = Klang abspielen wenn ein &Teilnehmer &offline geht
+checkbox.private.room = Raum &ist Privat
+checkbox.save.password = Pass&wort speichern
 checkbox.show.avatars.in.contactlist = &Zeige Avatars in der Kontaktliste
-checkbox.broadcast.hide.offline.user = Offline User ausblenden
+checkbox.show.notifications.in.conference = &Anzeigen von Benachrichtigungen in Konferenzräumen
+checkbox.show.time.in.chat.window = &Zeit im Chatfenster anzeigen
+checkbox.show.toaster = Informationen in einem &Popup anzeigen
+checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
+checkbox.start.in.tray = Spark automatisch in der &Taskleiste starten
+checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
+checkbox.use.compression = Komprimierung verwenden
 checkbox.use.debugger.on.startup = Debugger beim Starten öffnen
-checkbox.use.compression = Komprimierung verwenden 
+checkbox.use.proxy.server = &Proxy Server benutzen
+checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
+checkbox.window.to.front = &Fenster in den Vordergrund bringen
+checkbox.broadcast.hide.offline.user = Offline User ausblenden
 checkbox.use.krbconf = Verwende krb5.conf oder krb5.ini
 checkbox.use.krb.dns = Verwende DNS
 checkbox.use.specify.below = Specify Below
 checkbox.use.pki.authentication = Verwende PKI Authentifizierung
 checkbox.transport.tab.setting = Zeige verfügbare Transports in einem Tab an (benötigt Neustart von Spark)
 checkbox.conference.tab.setting = Zeige den Konferenzreiter (benötigt Neustart von Spark)
+
 label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
 label.change.password.to = &Neues Passwort eingeben
 label.username = &Benutzername
