Adding German translations of: checkbox.login.as.invisible checkbox.sort.asc.history checkbox.disable.asterisk.toaster checkbox.click.single.tray checkbox.use.hostname.as.resource checkbox.use.version.as.resource
Updateting German translation of:
checkbox.tabs.on.top
stun.server.addr
stun.server.port

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -333,7 +333,9 @@ button.view.tasklist = Aufgabenliste anschauen
 checkbox.allow.buzz = "&Buzzer" Funktion aktivieren.checkbox.save.password = Pass&wort speichern
 checkbox.auto.discover.port = &Host und Port automatisch bestimmen
 checkbox.auto.login = &Automatisches Login
+checkbox.login.as.invisible = Unsichtbar einl&oggen
 checkbox.disable.chat.history = &Den Chatverlauf nicht speichern
+checkbox.sort.asc.history = Nachrichten in Kontaktverlauf aufsteigend nach Datum sortieren
 checkbox.disable.prev.chat.history = Die letzte &Unterhaltung nicht anzeigen
 checkbox.enable.emoticons = &Emoticons aktivieren
 checkbox.graying.out = Nichtstuende Kontakte ausgrauen (benötigt Neustart von Spark)
@@ -358,9 +360,11 @@ checkbox.show.avatars.in.contactlist = &Zeige Avatars in der Kontaktliste
 checkbox.show.notifications.in.conference = &Anzeigen von Benachrichtigungen in Konferenzräumen
 checkbox.show.time.in.chat.window = &Zeit im Chatfenster anzeigen
 checkbox.show.toaster = Informationen in einem &Popup anzeigen
+checkbox.disable.asterisk.toaster = Popups von Anrufen deaktivieren
 checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
 checkbox.start.in.tray = Spark automatisch in der &Taskleiste starten
-checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
+checkbox.click.single.tray = &Einfachen Klick im System Tray verwenden, um Spark in den Vordergrund zu bringen
+checkbox.tabs.on.top = &Chat-Tabs oben anzeigen (benötigt Neustart von Spark)
 checkbox.use.compression = Komprimierung verwenden
 checkbox.use.debugger.on.startup = Debugger beim Starten öffnen
 checkbox.use.proxy.server = &Proxy Server benutzen
@@ -373,6 +377,8 @@ checkbox.use.specify.below = Specify Below
 checkbox.use.pki.authentication = Verwende PKI Authentifizierung
 checkbox.transport.tab.setting = Zeige verfügbare Transports in einem Tab an (benötigt Neustart von Spark)
 checkbox.conference.tab.setting = Zeige den Konferenzreiter (benötigt Neustart von Spark)
+checkbox.use.hostname.as.resource = Hostnamen als Ressource benutzen
+checkbox.use.version.as.resource = Spark-Version als Ressource benutzen
 
 label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
 label.change.password.to = &Neues Passwort eingeben
@@ -1075,7 +1081,7 @@ privacy.label.not.supported = Privatsphärelisten werden vom Server leider nicht 
 
 ##Stunfallback in media settings
 stun.border.label = STUN Ausweichserver
-stun.server.addr = Stun Server:
-stun.server.port = Stun Port:
+stun.server.addr = STUN Server:
+stun.server.port = STUN Port:
 
 #!#
