Updateting German translation of: delete.permanently

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -381,7 +381,7 @@ checkbox.use.hostname.as.resource = Hostnamen als Ressource benutzen
 checkbox.use.version.as.resource = Spark-Version als Ressource benutzen
 
 delete.log.permanently = Logs permanent löschen
-delete.permanently = Permanent Löschen?
+delete.permanently = Permanent löschen?
 
 label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
 label.change.password.to = &Neues Passwort eingeben
