Updating German translation of: group.offline

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -393,7 +393,7 @@ group.empty = Keine Offline-User in dieser Gruppe
 group.general.information = Allgemeine Informationen
 group.login.information = Login Informationen
 group.notification.options = Optionen zur Benachrichtigung
-group.offline = Offline Gruppe
+group.offline = Offline-Gruppe
 group.search.form = Suchformular
 group.search.results = Suchergebnisse
 group.chat.name.notification = Deinen Nick gesehen...
