Synching label block with master.

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -399,95 +399,104 @@ group.search.results = Suchergebnisse
 group.chat.name.notification = Deinen Nick gesehen...
 group.chat.name.match = Dein Name wurde im Gruppenchat erwähnt:
 
-label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
-label.change.password.to = &Neues Passwort eingeben
-label.username = &Benutzername
-label.name = &Name
-label.room.name = &Raumname
-label.room.topic = Raum &Thema
-label.password = &Passwort
-label.confirm.password = Neues Passwort &wiederholen
-label.server = &Server
-label.create.account = &Account erstellen
-label.close = &Schließen
-label.ok = OK
-label.cancel = Abbrechen
-label.use.default = Standard nutzen
-label.port = &Port
-label.auto.login = &Automatisches Login
-label.old.ssl = &Benutze ALTE SSL Port Methode
-label.host = &Host
-label.resource = &Ressource
-label.protocol = &Protokoll
+label.na = n/a
+label.cell = &Mobil
+label.work = &Geschäftlich
+label.home = &Privat
 label.accounts = A&ccounts
 label.passwordreset = Passwort reset
-label.transfer.timeout = &Zeitspanne bis zum Abbruch des Transfers (min):
-label.transfer.download.directory = &Download Verzeichnis:
-label.find = &Finden
-label.rename.to = Umbenennen zu
+label.add.conference.service = &Service für Konferenzen hinzufügen
+label.add.jid = &JID hinzufügen
+label.add.task = Aufgabe hinzufügen
+label.auto.login = &Automatisches Login
+label.available.users.in.roster = &Verfügbare Teilnehmer in der Kontaktliste
+label.avatar = Avatar:
+label.cancel = Abbrechen
+label.change.password.to = &Neues Passwort eingeben
+label.chatroom.fontsize = &Chatroom Schriftgröße:
+label.city = Sta&dt
+label.close = &Schließen
+label.company = &Firma
+label.confirm.password = Neues Passwort &wiederholen
+label.conflict.error = User ist bereits Angemeldet. Login wird verweigert.
 label.contact.to.find = Kontakt finden?
 label.recent.conversation = Kürzliche Konversationen
 label.frequent.contacts = Meistgenutzte Kontakte
-label.available.users.in.roster = &Verfügbare Teilnehmer in der Kontaktliste
-label.time = Zeit: {0}
-label.add.conference.service = &Service für Konferenzen hinzufügen
-label.add.jid = &JID hinzufügen
-label.message = &Nachricht
-label.room = &Raum
+label.contactlist.avatarsize = Kontaktliste &Avatargröße:
+label.contactlist.fontsize = Kontaktliste &Schriftgröße:
+label.country = &Land
+label.create.account = &Account erstellen
+label.department = &Abteilung
+label.dial = &Wählen
+label.display.time = Anzeigedauer:
+label.downloads = Downloads
+label.due = Due
+label.email.address = &E-Mail-Adresse
+label.emoticons = E&moticons
+label.enter.address = Adresse eingeben
+label.enter.group.name = Namen für neue Gruppe eingeben
+label.fax = Fa&x
+label.find = &Finden
+label.first.name = &Vorname
+label.group = &Gruppe
+label.host = &Host
 label.invited.users = Eingeladene Teilnehmer
+label.jabber.address = &Jabber Adresse
+label.jabber.id = &Jabber ID
+label.jid = &JID
+label.job.title = &Beruf
+label.last.name = &Nachname
+label.local.time = &Lokale Zeit
+label.message = &Nachricht
+label.message.style = &Nachrichten Style
+label.middle.name = &Zuname
+label.minutes.before.stale.chat = &Ein Chatfenster als 'inaktiv' kennzeichnen nach (min)
+label.mobile = &Mobil
+label.name = &Name
+label.network = Netzwerk
 label.new.nickname = Neuer angezeigter Name
-label.server.address = &Server Adresse
 label.nickname = &Angezeigter Name
+label.number = &Nummer
+label.ok = OK
+label.old.ssl = &Benutze ALTE SSL Port Methode
+label.os = &Bestriebssystem
+label.pager = Pa&ger
+label.password = &Passwort
+label.phone = &Telefon
+label.port = &Port
+label.postal.code = &Postleitzahl
 label.presence = &Presence
 label.priority = P&riorität
-label.enter.address = Adresse eingeben
-label.jabber.address = &Jabber Adresse
-label.local.time = &Lokale Zeit
-label.software = &Software
-label.version = &Version
-label.os = &Bestriebssystem
-label.number = &Nummer
-label.dial = &Wählen
-label.minutes.before.stale.chat = &Ein Chatfenster als 'inaktiv' kennzeichnen nach (min)
-label.company = &Firma
-label.cell = &Mobil
-label.work = &Geschäftlich
-label.home = &Privat   
-label.street.address = &Straße
-label.city = Sta&dt
-label.state.and.province = Staat/&Region
-label.postal.code = &Postleitzahl
-label.country = &Land
-label.job.title = &Beruf
-label.department = &Abteilung
-label.phone = &Telefon
-label.fax = Fa&x
-label.mobile = &Mobil
-label.web.page = &Internetseite
-label.pager = Pa&ger
-label.first.name = &Vorname
-label.middle.name = &Zuname
-label.last.name = &Nachname
-label.email.address = &E-Mail-Adresse
-label.jid = &JID
-label.search.service = &Such-Service
-label.xmpp.port = &XMPP Port
+label.protocol = &Protokoll
+label.received = Empfangen
+label.rename.to = Umbenennen zu
+label.resource = &Ressource
 label.response.timeout = &Zeitspanne bis zum Abbruch (sec)
+label.room = &Raum
+label.room.name = &Raumname
+label.room.topic = Raum &Thema
+label.search = Search
+label.search.service = &Such-Service
+label.seconds = Sekunden
+label.server = &Server
+label.server.address = &Server Adresse
+label.show = Zeigen:
+label.software = &Software
+label.state.and.province = Staat/&Region
+label.street.address = &Straße
+label.time = Zeit: {0}
 label.time.till.idle = Zeitspanne für automatisches 'Away' bei &Inaktivität (min)
 label.time.till.idlemessage = Stat&usnachricht für automatisches 'Away'
-label.jabber.id = &Jabber ID
-label.group = &Gruppe
-label.enter.group.name = Namen für neue Gruppe eingeben
-label.network = Netzwerk
+label.timeformat = Benutze {0}
+label.transfer.download.directory = &Download Verzeichnis:
+label.transfer.timeout = &Zeitspanne bis zum Abbruch des Transfers (min):
 label.unable.to.add.contact = Kann Kontakt nicht hinzufügen.
-label.conflict.error = User ist bereits Angemeldet. Login wird verweigert.
-label.message.style = &Nachrichten Style
-label.emoticons = E&moticons
-label.contactlist.fontsize = Kontaktliste &Schriftgröße:
-label.chatroom.fontsize = &Chatroom Schriftgröße:
-label.contactlist.avatarsize = Kontaktliste &Avatargröße:
-label.display.time = Anzeigedauer:
-label.seconds = Sekunden
+label.use.default = Standard nutzen
+label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Netzwerk
+label.username = &Benutzername
+label.version = &Version
+label.web.page = &Internetseite
+label.xmpp.port = &XMPP Port
 label.krb.realm = Realm
 label.krb.kdc = KDC
 label.which.pki.method = Welche PKI Methode?
@@ -496,6 +505,15 @@ label.trust.store.password = Trust Store Passwort
 label.enter.password = Password eingeben
 label.move.focus.forwards = Move Focus Forwards
 label.move.focus.backwards = Move Focus Backwards
+label.keystore.location = Keystore Pfad
+label.truststore.location = Truststore Pfad
+label.pkcs.library.file = PKCS11 library Datei
+label.x509.certificate = X.509 Zertifikat
+label.apple.keychain = Apple KeyChain
+label.add.to.roster = Benutzer zum Roster hinzufügen
+label.audio.device = &Audio Gerät
+label.video.device = &Video Gerät
+
 message.username.error = Wählen Sie einen Benutzernamen für diesem Account.
 message.password.error = Wähle Sie Passwort für diesem Account.
 message.confirmation.password.error = Wiederholen Sie das Passwort.
@@ -961,21 +979,6 @@ tooltip.view.changelog = Änderungen anzeigen
 tooltip.view.readme = ReadMe anzeigen
 tooltip.notifications = Einstellungen der Benachrichtigungen für eingehende Chats.
 tooltip.place.voice.call = VOIP Anruf starten.
-label.na = n/a
-label.add.task = Aufgabe hinzufügen
-label.downloads = Downloads
-label.due = Due
-label.received = Empfangen
-label.show = Zeigen:
-label.timeformat = Benutze {0}
-label.keystore.location = Keystore Pfad
-label.truststore.location = Truststore Pfad
-label.pkcs.library.file = PKCS11 library Datei
-label.x509.certificate = X.509 Zertifikat
-label.apple.keychain = Apple KeyChain
-label.add.to.roster = Benutzer zum Roster hinzufügen
-label.audio.device = &Audio Gerät
-label.video.device = &Video Gerät
 menuitem.dial = Wählen
 menuitem.languages = Sprachen
 menuitem.inivite.again = Nochmals einladen
