Updating German translation of: button.save.for.future.use button.unset.file.explorer checkbox.allow.buzz checkbox.notify.user.comes.online checkbox.notify.user.goes.offline checkbox.notify.typing.systemtray checkbox.notify.systemtray checkbox.play.sound.on.invitation checkbox.play.sound.on.new.message checkbox.play.sound.on.outgoing.message checkbox.play.sound.when.offline checkbox.private.room checkbox.show.avatars.in.contactlist checkbox.use.proxy.server checkbox.use.system.look.and.feel group.login.information label.passwordreset label.chatroom.fontsize label.conflict.error label.contact.to.find label.jabber.address label.jabber.id label.message.style label.middle.name label.old.ssl label.presence label.room.topic label.search label.server.address label.transfer.download.directory label.xmpp.port label.trust.store.password label.keystore.location label.truststore.location label.pkcs.library.file label.x509.certificate label.apple.keychain label.add.to.roster label.audio.device label.video.device

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -317,20 +317,20 @@ button.reject = Ablehnen
 button.remove.bookmark = Lesezeichen löschen
 button.roster = &Kontaktliste
 button.save = &Speichern
-button.save.for.future.use = &Speichern für die spätere Verwendung
+button.save.for.future.use = &Speichern für spätere Verwendung
 button.search = &Suchen
 button.send = Senden
 button.send.email = Email
 button.start.chat = Chat
 button.tasks.active = Aktiv
 button.tasks.all = Alles
-button.unset.file.explorer = entferne gespeicherten File Browser
+button.unset.file.explorer = entferne gespeicherten File-Browser
 button.update = &Aktualisieren
 button.view.notes = Notizen anschauen
 button.view.profile = Gesamtes Profil anzeigen
 button.view.tasklist = Aufgabenliste anschauen
 
-checkbox.allow.buzz = "&Buzzer" Funktion aktivieren.checkbox.save.password = Pass&wort speichern
+checkbox.allow.buzz = "&Buzzer"-Funktion aktivieren.checkbox.save.password = Pass&wort speichern
 checkbox.auto.discover.port = &Host und Port automatisch bestimmen
 checkbox.auto.login = &Automatisches Login
 checkbox.login.as.invisible = Unsichtbar einl&oggen
@@ -345,18 +345,18 @@ checkbox.reconnet.info = Art des Wiederverbindens:
 checkbox.reconnect.panel.big = Zeige ein Panel
 checkbox.reconnect.panel.small = Zeige eine Gruppe
 checkbox.reconnect.panel.icon = Zeige ein Icon
-checkbox.notify.user.comes.online = &Benachrichtigen, wenn ein User Online kommt
-checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein &User Offline geht
-checkbox.notify.typing.systemtray = Zeige &Schreibhinweise im System Tray
-checkbox.notify.systemtray = Zeige &neue Nachrichten im System Tray
+checkbox.notify.user.comes.online = &Benachrichtigen, wenn ein User online kommt
+checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein &User offline geht
+checkbox.notify.typing.systemtray = Zeige &Schreibhinweise im System-Tray
+checkbox.notify.systemtray = Zeige &neue Nachrichten im System-Tray
 checkbox.permanent = Raum ist &permanent Online
-checkbox.play.sound.on.invitation = Klang abspielen bei eintreffen einer &Konferenz &Einladung
-checkbox.play.sound.on.new.message = Klang abspielen wenn eine neue &Nachricht eintrifft
-checkbox.play.sound.on.outgoing.message = &Klang abspielen wenn Nachricht ge&sendet wird
-checkbox.play.sound.when.offline = Klang abspielen wenn ein &Teilnehmer &offline geht
-checkbox.private.room = Raum &ist Privat
+checkbox.play.sound.on.invitation = Klang abspielen bei Eintreffen einer &Konferenzeinladung
+checkbox.play.sound.on.new.message = Klang abspielen, wenn eine neue &Nachricht eintrifft
+checkbox.play.sound.on.outgoing.message = &Klang abspielen, wenn Nachricht ge&sendet wird
+checkbox.play.sound.when.offline = Klang abspielen, wenn ein &Teilnehmer &offline geht
+checkbox.private.room = Raum &ist privat
 checkbox.save.password = Pass&wort speichern
-checkbox.show.avatars.in.contactlist = &Zeige Avatars in der Kontaktliste
+checkbox.show.avatars.in.contactlist = &Zeige Avatare in der Kontaktliste
 checkbox.show.notifications.in.conference = &Anzeigen von Benachrichtigungen in Konferenzräumen
 checkbox.show.time.in.chat.window = &Zeit im Chatfenster anzeigen
 checkbox.show.toaster = Informationen in einem &Popup anzeigen
@@ -367,8 +367,8 @@ checkbox.click.single.tray = &Einfachen Klick im System Tray verwenden, um Spark
 checkbox.tabs.on.top = &Chat-Tabs oben anzeigen (benötigt Neustart von Spark)
 checkbox.use.compression = Komprimierung verwenden
 checkbox.use.debugger.on.startup = Debugger beim Starten öffnen
-checkbox.use.proxy.server = &Proxy Server benutzen
-checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
+checkbox.use.proxy.server = &Proxy-Server benutzen
+checkbox.use.system.look.and.feel = System-Look-And-&Feel verwenden (benötigt Neustart von Spark)
 checkbox.window.to.front = &Fenster in den Vordergrund bringen
 checkbox.broadcast.hide.offline.user = Offline User ausblenden
 checkbox.use.krbconf = Verwende krb5.conf oder krb5.ini
@@ -391,7 +391,7 @@ group.conferences.found = Konferenzen gefunden
 group.connection = Verbindung
 group.empty = Keine Offline-User in dieser Gruppe
 group.general.information = Allgemeine Informationen
-group.login.information = Login Informationen
+group.login.information = Login-Informationen
 group.notification.options = Optionen zur Benachrichtigung
 group.offline = Offline-Gruppe
 group.search.form = Suchformular
@@ -404,7 +404,7 @@ label.cell = &Mobil
 label.work = &Geschäftlich
 label.home = &Privat
 label.accounts = A&ccounts
-label.passwordreset = Passwort reset
+label.passwordreset = Passwort zurücksetzen
 label.add.conference.service = &Service für Konferenzen hinzufügen
 label.add.jid = &JID hinzufügen
 label.add.task = Aufgabe hinzufügen
@@ -413,13 +413,13 @@ label.available.users.in.roster = &Verfügbare Teilnehmer in der Kontaktliste
 label.avatar = Avatar:
 label.cancel = Abbrechen
 label.change.password.to = &Neues Passwort eingeben
-label.chatroom.fontsize = &Chatroom Schriftgröße:
+label.chatroom.fontsize = &Chatroom-Schriftgröße:
 label.city = Sta&dt
 label.close = &Schließen
 label.company = &Firma
 label.confirm.password = Neues Passwort &wiederholen
-label.conflict.error = User ist bereits Angemeldet. Login wird verweigert.
-label.contact.to.find = Kontakt finden?
+label.conflict.error = User ist bereits angemeldet. Login wird verweigert.
+label.contact.to.find = Kontakt finden
 label.recent.conversation = Kürzliche Konversationen
 label.frequent.contacts = Meistgenutzte Kontakte
 label.contactlist.avatarsize = Kontaktliste &Avatargröße:
@@ -441,15 +441,15 @@ label.first.name = &Vorname
 label.group = &Gruppe
 label.host = &Host
 label.invited.users = Eingeladene Teilnehmer
-label.jabber.address = &Jabber Adresse
-label.jabber.id = &Jabber ID
+label.jabber.address = &Jabber-Adresse
+label.jabber.id = &Jabber-ID
 label.jid = &JID
 label.job.title = &Beruf
 label.last.name = &Nachname
 label.local.time = &Lokale Zeit
 label.message = &Nachricht
-label.message.style = &Nachrichten Style
-label.middle.name = &Zuname
+label.message.style = &Nachrichtenstil
+label.middle.name = &Zweiter Vorname
 label.minutes.before.stale.chat = &Ein Chatfenster als 'inaktiv' kennzeichnen nach (min)
 label.mobile = &Mobil
 label.name = &Name
@@ -458,14 +458,14 @@ label.new.nickname = Neuer angezeigter Name
 label.nickname = &Angezeigter Name
 label.number = &Nummer
 label.ok = OK
-label.old.ssl = &Benutze ALTE SSL Port Methode
+label.old.ssl = &Benutze ALTE SSL-Port-Methode
 label.os = &Bestriebssystem
 label.pager = Pa&ger
 label.password = &Passwort
 label.phone = &Telefon
 label.port = &Port
 label.postal.code = &Postleitzahl
-label.presence = &Presence
+label.presence = S&tatus
 label.priority = P&riorität
 label.protocol = &Protokoll
 label.received = Empfangen
@@ -474,12 +474,12 @@ label.resource = &Ressource
 label.response.timeout = &Zeitspanne bis zum Abbruch (sec)
 label.room = &Raum
 label.room.name = &Raumname
-label.room.topic = Raum &Thema
-label.search = Search
+label.room.topic = Raum&thema
+label.search = Suchen
 label.search.service = &Such-Service
 label.seconds = Sekunden
 label.server = &Server
-label.server.address = &Server Adresse
+label.server.address = &Server-Adresse
 label.show = Zeigen:
 label.software = &Software
 label.state.and.province = Staat/&Region
@@ -488,7 +488,7 @@ label.time = Zeit: {0}
 label.time.till.idle = Zeitspanne für automatisches 'Away' bei &Inaktivität (min)
 label.time.till.idlemessage = Stat&usnachricht für automatisches 'Away'
 label.timeformat = Benutze {0}
-label.transfer.download.directory = &Download Verzeichnis:
+label.transfer.download.directory = &Download-Verzeichnis:
 label.transfer.timeout = &Zeitspanne bis zum Abbruch des Transfers (min):
 label.unable.to.add.contact = Kann Kontakt nicht hinzufügen.
 label.use.default = Standard nutzen
@@ -496,23 +496,23 @@ label.user.on.public.network = Teilnehmer befindet sich in einem öffentlichen Ne
 label.username = &Benutzername
 label.version = &Version
 label.web.page = &Internetseite
-label.xmpp.port = &XMPP Port
+label.xmpp.port = &XMPP-Port
 label.krb.realm = Realm
 label.krb.kdc = KDC
 label.which.pki.method = Welche PKI Methode?
 label.choose.file = Datei auswählen
-label.trust.store.password = Trust Store Passwort
+label.trust.store.password = Trust-Store-Passwort
 label.enter.password = Password eingeben
 label.move.focus.forwards = Move Focus Forwards
 label.move.focus.backwards = Move Focus Backwards
-label.keystore.location = Keystore Pfad
-label.truststore.location = Truststore Pfad
-label.pkcs.library.file = PKCS11 library Datei
-label.x509.certificate = X.509 Zertifikat
-label.apple.keychain = Apple KeyChain
-label.add.to.roster = Benutzer zum Roster hinzufügen
-label.audio.device = &Audio Gerät
-label.video.device = &Video Gerät
+label.keystore.location = Keystore-Pfad
+label.truststore.location = Truststore-Pfad
+label.pkcs.library.file = PKCS11-Bibliotheksdatei
+label.x509.certificate = X.509-Zertifikat
+label.apple.keychain = Apple-KeyChain
+label.add.to.roster = Benutzer zur Kontaktliste hinzufügen
+label.audio.device = &Audiogerät
+label.video.device = &Videogerät
 
 message.username.error = Wählen Sie einen Benutzernamen für diesem Account.
 message.password.error = Wähle Sie Passwort für diesem Account.
